css for box model

--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,48 @@
-body{background-color: yellow;
+body{background-color:lightcyan;
     
-    margin:25px;
-    padding: 150px;
-    content: 100px;
+   
    }
 
-
-h1{ color:lightblue;
-    text-align: center;
-}
-h2{color:palevioletred;
-  text-align: left;
-}
-li{color: goldenrod;
-   font-size: xx-large;
-}
-
-ul{font-size:x-large;
-
-}
-
 #headerImg{
-position: relative;
-left:auto;
-bottom: auto;
+width: 500px;
+height: 500px;
+border: 100px;
+margin: 100px;
+padding: 100px:
+
 }
 
-.pie{
-    color:blueviolet;
-    text-align: center;
+
+#secondImg{
+    width:500px;
+    height:500px;
+    position: relative;
+    left:415px;
+    bottom: 800px;
+    border:100px;
+    margin:100px;
+    padding:100px;
 }
 
-#eat{
-    font-size: 25px;
+#thridImg{
+    width:500px;
+    height:500px;
+    border:100px;
+    margin:100px;
+    padding:100px;
+    position: relative;
+    bottom: 1150px;
+    right: 110px;
 }
 
-#lemon{
-    font-size: 20px;
+#fourthImg{
+    width:500px;
+    height:500px;
+    border:100px;
+    margin:100px;
+    padding:100px;
+    position: relative;
+    bottom: 2050px;
+    right: -425px;
 }
 
-.list{
-display:grid;
-grid-template-columns: 1fr 1fr ;
-}
-
-.talk{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-}
