--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,50 @@
-body{background-color:lightcyan;
-    
-   
+body{background-color: yellow;
+
+    margin:25px;
+    padding: 150px;
+    content: 100px;
    }
 
+
+h1{ color:lightblue;
+    text-align: center;
+}
+h2{color:palevioletred;
+  text-align: left;
+}
+li{color: goldenrod;
+   font-size: xx-large;
+}
+
+ul{font-size:x-large;
+
+}
+
 #headerImg{
-width: 500px;
-height: 500px;
-border: 100px;
-margin: 100px;
-padding: 100px:
-
+position: relative;
+left:auto;
+bottom: auto;
 }
 
-
-#secondImg{
-    width:500px;
-    height:500px;
-    position: relative;
-    left:415px;
-    bottom: 800px;
-    border:100px;
-    margin:100px;
-    padding:100px;
+.pie{
+    color:blueviolet;
+    text-align: center;
 }
 
-#thridImg{
-    width:500px;
-    height:500px;
-    border:100px;
-    margin:100px;
-    padding:100px;
-    position: relative;
-    bottom: 1150px;
-    right: 110px;
+#eat{
+    font-size: 25px;
 }
 
-#fourthImg{
-    width:500px;
-    height:500px;
-    border:100px;
-    margin:100px;
-    padding:100px;
-    position: relative;
-    bottom: 2050px;
-    right: -425px;
+#lemon{
+    font-size: 20px;
 }
 
+.list{
+display:grid;
+grid-template-columns: 1fr 1fr ;
+}
+
+.talk{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
